Change OpenAPI download endpoint
